# gba-sprite-engine

./: CMakeLists.txt  README.md
demos/demo1-basicfeatures/src/: ff.h  flying_stuff_scene.cpp  kul.h  lama.h  sample_start_scene.cpp
demos/demo2-arkanoid/src/: SplashScreen.cpp  arkanoid_game_scene.cpp  arkanoid_game_scene.h  spritedata.h
engine/: CMakeLists.txt
engine/include/libgba-sprite-engine/gba/: tonc_memdef.h  tonc_types.h
engine/src/: gba_engine.cpp
engine/src/background/: background.cpp  text_stream.cpp
ourgame/: CMakeLists.txt  Readme.md  mediasources.txt
ourgame/src/: Character_selection_scene.cpp  Character_selection_scene.h  Death_scene.cpp  Death_scene.h  FloatingIslands_scene.cpp  FloatingIslands_scene.h  Instruction_scene.cpp  Instruction_scene.h  Level1_scene.cpp  Level1_scene.h  Main.cpp  Player.cpp  Player.h  TempSave.cpp  TempSave.h  Temple_scene.cpp  Temple_scene.h  Title_scene.cpp  Title_scene.h  Victory_scene.cpp  Victory_scene.h  death_scene.cpp  death_scene.h  fantasyplatformer.h  floatingIslands_scene.cpp  floatingIslands_scene.h  instruction_scene.cpp  instruction_scene.h  level0_scene.cpp  level0_scene.h  level1_scene.cpp  level1_scene.h  main.cpp  temple_scene.cpp  temple_scene.h  test_scene.cpp  test_scene.h  title_scene.cpp  title_scene.h
ourgame/src/backgrounds/: character_selection_input.h  fantasyplatformer.h  floatingIslands_input.h  instruction_input.h  level0_input.h  temple_input.h  title_input.h  victory_input.h
ourgame/src/scenes/: Character_selection_scene.cpp  FloatingIslands_scene.cpp  Level1_scene.cpp  Level1_scene.h  Temple_scene.cpp  Temple_scene.h  Title_scene.cpp  Title_scene.h  Victory_scene.cpp  Victory_scene.h
ourgame/src/sounds/: choose_your_character.h
ourgame/src/sprites/: death_sprites.h  dude_sprites.h  owlet_sprites.h  pink_guy_coin_sprites.h  player_idle_sprite.h
thegame/: hey.cpp  hey.h
tilerun/: Readme.md
tilerun/src/: Main.cpp  Player.cpp  TempSave.h
tilerun/src/backgrounds/: level1_input.h  temple_input.h
tilerun/src/scenes/: Character_selection_scene.h  Death_scene.cpp  Death_scene.h  FloatingIslands_scene.h  Instruction_scene.cpp  Instruction_scene.h  Title_scene.cpp
tilerun/src/sounds/: coinsound.h
tilerun/src/sprites/: dude_sprites.h  lvl0_sprites.h  owlet_sprites.h  pink_guy_sprites.h
